Implemented Recurrent Event response formatter
and recurrent event controller

According to clean architecture separation of layers.